--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="We offer many services ranging from rebranding your company to helping you with new and unique marketing strategies
-  such as custom Snapchat Geofilters.">
+  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hector Parra Designs</title>
+  <title>LifeVest</title>
   <link rel="stylesheet" href="main_style.css">
   <script src=script.js> </script>
-  <link rel="icon" href="images/Logo-Design2.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="images/Logo-Design2.ico" type="image/x-icon" />
+  <link rel="icon" href="" type="image/x-icon">
+  <link rel="shortcut icon" href="" type="image/x-icon" />
 </head>
 
-<body background="images/Crystal.png">
+<body background="">
   <ul class="topnav" id="myTopnav">
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="information.html">Information</a></li>
@@ -23,19 +22,17 @@
       <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
     </li>
   </ul>
-  <img class="logo" src="images/Logo-Design2.png">
+  <img class="logo" src="">
   <div id="intro">
-    <h3> Welcome to Hector Parra Designs!</h3>
-    <p>We offer many services ranging from rebranding your company to helping you with new and unique marketing strategies such
-      as custom Snapchat Geofilters.</p>
-    <p> Wish to see some of my previous work? Feel free to check out the slideshow of different designs I have created under
-      the portfolio tab. </p>
+    <h3> Welcome to LifeVest</h3>
+    <p></p>
+    <p></p>
   </div>
   <br>
   <br>
   <br>
   
 </body>
-<footer><br>Copyright (c) 2016 Hector Parra All Rights Reserved.<br><br></footer>
+<footer><br>Copyright (c) 2017 LifeVest All Rights Reserved.<br><br></footer>
 
 </html>
