--- a/information.html
+++ b/information.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -48,6 +48,6 @@
     </div>
   </div>
 </body>
-<footer><br>Copyright (c) 2016 Hector Parra All Rights Reserved.<br><br></footer>
+<footer><br>Copyright (c) 2017 LifeVest All Rights Reserved.<br><br></footer>
 
 </html>
