--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -80,6 +80,6 @@
   </div>
 </body>
 
-<footer><br>Copyright (c) 2016 Hector Parra All Rights Reserved.<br><br></footer>
+<footer><br>Copyright (c) 2017 LifeVest All Rights Reserved.<br><br></footer>
 
 </html>
