--- a/request.html
+++ b/request.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -29,6 +29,6 @@
 </body>
   </div>
 
-<footer><br>Copyright (c) 2016 Hector Parra All Rights Reserved.<br><br></footer>
+<footer><br>Copyright (c) 2017 LifeVest All Rights Reserved.<br><br></footer>
 
 </html>
