Couple of changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,17 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="We offer many services ranging from rebranding your company to helping you with new and unique marketing strategies
-  such as custom Snapchat Geofilters.">
+  <meta name="description" content=""
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hector Parra Designs</title>
+  <title>LifeVest</title>
   <link rel="stylesheet" href="main_style.css">
   <script src=script.js> </script>
-  <link rel="icon" href="images/Logo-Design2.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="images/Logo-Design2.ico" type="image/x-icon" />
+  <link rel="icon" href="" type="image/x-icon">
+  <link rel="shortcut icon" href="" type="image/x-icon" />
 </head>
 
-<body background="images/Crystal.png">
+<body background="">
   <ul class="topnav" id="myTopnav">
     <li><a href="index.html">Home</a></li>
     <li><a href="information.html">Information</a></li>
@@ -23,61 +22,7 @@
       <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
     </li>
   </ul>
-  <div class="gallery">
 
-    <!-- Image gallery: each box represents an image-->
-    <div class="box">
-      <div class="boxInner">
-        <img src="images/p1.png" />
-      </div>
-    </div>
-    <div class="box">
-      <div class="boxInner">
-        <img src="images/image8854.png" />
-      </div>
-    </div>
-    <div class="box">
-      <div class="boxInner">
-        <img src="images/p4.png" />
-      </div>
-    </div>
-    <div class="box">
-      <div class="boxInner">
-        <img src="images/p3.png" />
-      </div>
-    </div>
-    <div class="box">
-      <div class="boxInner">
-        <img src="images/p2.png" />
-      </div>
-    </div>
-    <div class="box">
-      <div class="boxInner">
-        <img src="images/p6.png" />
-      </div>
-    </div>
-    <div class="box">
-      <div class="boxInner">
-        <img src="images/p5.png" />
-      </div>
-    </div>
-    <div class="box">
-      <div class="boxInner">
-        <img src="images/p8.png" />
-      </div>
-    </div>
-    <div class="box">
-      <div class="boxInner">
-        <img src="images/p7.png" />
-      </div>
-    </div>
-    <div class="box">
-      <div class="boxInner">
-        <img src="images/comingsoon.png" />
-      </div>
-    </div>
-
-  </div>
 </body>
 
 <footer><br>Copyright (c) 2017 LifeVest All Rights Reserved.<br><br></footer>
