--- a/request.html
+++ b/request.html
@@ -3,31 +3,30 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="We offer many services ranging from rebranding your company to helping you with new and unique marketing strategies
-  such as custom Snapchat Geofilters.">
+  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hector Parra Designs</title>
+  <title>LifeVest</title>
   <link rel="stylesheet" href="main_style.css">
   <script src=script.js> </script>
-  <link rel="icon" href="images/Logo-Design2.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="images/Logo-Design2.ico" type="image/x-icon" />
+  <link rel="icon" href="" type="image/x-icon">
+  <link rel="shortcut icon" href="" type="image/x-icon" />
 </head>
 
-<body background="images/Crystal.png">
-  <ul class="topnav" id="myTopnav">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="information.html">Information</a></li>
-    <li><a class="active" href="request.html">Request</a></li>
-    <li><a href="portfolio.html">Portfolio</a></li>
-    <li class="icon">
-      <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
-    </li>
-  </ul>
+<body background="">
+    <ul class="topnav" id="myTopnav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="information.html">Information</a></li>
+        <li><a class="active" href="request.html">Request</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li class="icon">
+            <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
+        </li>
+    </ul>
 
-  
-  <div id="intro"><h3>Want me to do some work for you?</h3><p>I am always looking for new projects to work on. If you have something in mind that you would like to get down or even just want to get an opinion on updating your current graphics feel free to shoot me an email at <a href="mailto:hector@hectorparra.me?Subject=Request%20Design" target="_top">hector@hectorparra.me</a>. </p>
+
+    <div id="intro">
+    </div>
 </body>
-  </div>
 
 <footer><br>Copyright (c) 2017 LifeVest All Rights Reserved.<br><br></footer>
 
