--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body background="">
-  <!--<ul class="topnav" id="myTopnav">
+  <ul class="topnav" id="myTopnav">
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="information.html">Information</a></li>
     <li><a href="request.html">Request</a></li>
@@ -21,7 +21,7 @@
     <li class="icon">
       <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
     </li>
-  </ul>-->
+  </ul>
   <img class="logo" src="">
   <div id="intro">
     <h3> Welcome to LifeVest</h3>
