--- a/index.html
+++ b/index.html
@@ -13,19 +13,10 @@
 </head>
 
 <body background="">
-  <ul class="topnav" id="myTopnav">
-    <li><a class="active" href="index.html">Home</a></li>
-    <li><a href="information.html">Information</a></li>
-    <li><a href="request.html">Request</a></li>
-    <li><a href="portfolio.html">Portfolio</a></li>
-    <li class="icon">
-      <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
-    </li>
-  </ul>
   <img class="logo" src="">
   <div id="intro">
     <h3> Welcome to LifeVest</h3>
-    <p></p>
+    <p><a href="information.html">Lets Get Started!</a></p>
     <p></p>
   </div>
   <br>
