Image for Index

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body background="">
   <img class="logo" src="">
   <div id="intro">
+    <img src="images/lifevest.png" />
     <h3> Welcome to LifeVest</h3>
     <p><a href="information.html">Lets Get Started!</a></p>
     <p></p>
