--- a/request.html
+++ b/request.html
@@ -14,10 +14,10 @@
 
 <body background="">
     <ul class="topnav" id="myTopnav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="information.html">Information</a></li>
+        <li><a id="orange" href="index.html">Home</a></li>
+        <li><a id="red" href="information.html">Information</a></li>
         <li><a id="purple" class="active" href="request.html">Request</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a id="blue" href="portfolio.html">Portfolio</a></li>
         <li class="icon">
             <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
         </li>
