--- a/information.html
+++ b/information.html
@@ -22,6 +22,9 @@
       <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
     </li>
   </ul>
+    <div id="content">
+        <p>This is where would go</p>
+    </div>
 </body>
 <footer><br>Copyright (c) 2017 LifeVest All Rights Reserved.<br><br></footer>
 
