--- a/information.html
+++ b/information.html
@@ -23,7 +23,7 @@
     </li>
   </ul>
     <div id="content">
-        <p>     </p>
+        <p>Content Goes Here</p>
     </div>
 </body>
 <footer><br>Copyright (c) 2017 LifeVest All Rights Reserved.<br><br></footer>
