--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,9 @@
       <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
     </li>
   </ul>
-
+    <div id="content">
+        <p>Content Goes Here</p>
+    </div>
 </body>
 
 <footer><br>Copyright (c) 2017 LifeVest All Rights Reserved.<br><br></footer>
