--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
 </head>
 
 <body background="">
+<div>
   <ul class="topnav" id="myTopnav">
     <li><a id="orange" href="index.html">Home</a></li>
     <li><a id="red" href="information.html">Information</a></li>
@@ -22,6 +23,7 @@
       <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
     </li>
   </ul>
+</div>
     <div id="content">
         <p>Content Goes Here</p>
     </div>
