--- a/information.html
+++ b/information.html
@@ -14,10 +14,11 @@
 
 <body background="">
   <ul class="topnav" id="myTopnav">
-    <li><a id="orange" href="index.html">Home</a></li>
-    <li><a id="red" class="active" href="information.html">Information</a></li>
-    <li><a id="purple" href="request.html">Request</a></li>
-    <li><a id="blue" href="portfolio.html">Portfolio</a></li>
+      <li><a id="yellow" href="index.html">Contact</a></li>
+      <li><a id="orange" href="information.html">Careers</a></li>
+      <li><a id="red" href="request.html">How To</a></li>
+      <li><a id="purple" href="portfolio.html">About Us</a></li>
+      <li><a id="blue" href="loging.html">Login</a></li>
     <li class="icon">
       <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
     </li>
